--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=qlsp
-server.port=8080
+
 #spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/qlspmain
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://locsql6.freesqldatabase.com
+spring.datasource.username=sql6701440
+spring.datasource.password=CfbUvawP7Q
 
 
 #folder.image=D:\\bt_java\\image\\
@@ -20,5 +20,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
-#gi·m s·t h? th?ng
+#gi√°m s√°t h? th?ng
 management.endpoints.web.exposure.include=health,info,metrics,process.cpu.usage
