--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=qlsp
 
 #spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:mysql://locsql6.freesqldatabase.com
+spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6701440
 spring.datasource.username=sql6701440
 spring.datasource.password=CfbUvawP7Q
 
