--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,12 @@ spring.application.name=qlsp
 
 #spring.thymeleaf.cache=false
 
-spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6701440
-spring.datasource.username=sql6701440
-spring.datasource.password=CfbUvawP7Q
-
+#spring.datasource.url=jdbc:mysql://sql6.freesqldatabase.com:3306/sql6701440
+#spring.datasource.username=sql6701440
+#spring.datasource.password=CfbUvawP7Q
+spring.datasource.url=jdbc:mysql://co6.h.filess.io:3307/qlsp_fireplace
+spring.datasource.username=qlsp_fireplace
+spring.datasource.password=1c04c2d6660c7eece326eeeec221b97f13b57872
 
 #folder.image=D:\\bt_java\\image\\
 
